##Text encoding: utf-8

2013-05-02  Jean Bréfort  <jean.brefort@normalesup.org>
	* gnumeric/Makefile.am: fix warning.
	* libs/gcp/reaction-arrow.cc: evaluate attached objects blocks sizes.
	* libs/gcp/step-counter.cc: fix step.

2013-04-30  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/Makefile.am: add new files.
	* libs/gcp/application.cc: new StepCounter class.
	* libs/gcp/reaction-arrow.cc: ditto.
	* libs/gcp/reaction-operator.h: removed unused member.
	* libs/gcp/reaction-separator.h: ditto.
	* libs/gcp/step-counter.cc: new class.
	* libs/gcp/step-counter.h: ditto.
	* libs/gcu/macros.h: add a new macro: GCU_PROP_FULL.

2013-04-29  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/reaction-arrow.cc: evaluate lines size.
	* libs/gcp/reaction-prop.cc: implement GetYAlign().
	* libs/gcp/reaction-prop.h: ditto.

2013-04-28  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/reaction-arrow.cc: start work on children aligment.
	* libs/gcp/reaction-separator.h: add missing declaration.

2013-04-27  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/Makefile.am: add new files.
	* libs/gcp/application.cc: new ReactionSeparator class.
	* libs/gcp/reaction-arrow.cc: ditto.
	* libs/gcp/reaction-separator.cc: ditto.
	* libs/gcp/reaction-separator.h: ditto.

2013-04-26  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/reaction-arrow.cc: add properties editor.
	* libs/gcp/reaction-arrow.h: ditto.
	* ui/paint/Makefile.am: install the new ui file.
	* ui/paint/reaction-arrow-prop.ui: populate.

2013-04-24  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/reaction-arrow.cc: add more properties.
	* libs/gcp/reaction-arrow.h: ditto.

2013-04-23  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/reaction-arrow.cc: add a PositionChildren() method.
	* libs/gcp/reaction-arrow.h: ditto.
	* libs/gcp/reaction-prop-dlg.cc: initialize spin buttons.
	* libs/gcp/reaction-prop-dlg.h: ditto.