@@ -1,5 +1,10 @@
 ##Text encoding: utf-8
 
+2013-05-04  Jean Bréfort  <jean.brefort@normalesup.org>
+	* libs/gcp/reaction-arrow.cc: ensure the length is long enough after adding
+	children, and remove obsolete PositionChild().
+	* libs/gcp/reaction-arrow.h: ditto.
+
 2013-05-02  Jean Bréfort  <jean.brefort@normalesup.org>
 	* gnumeric/Makefile.am: fix warning.
 	* libs/gcp/reaction-arrow.cc: evaluate attached objects blocks sizes.
